--- a/jobwatch/package.json
+++ b/jobwatch/package.json
@@ -4,18 +4,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "fix": "eslint src --fix",
+    "servor": "npx servor dist index.html 8080 --browse --reload"
   },
   "devDependencies": {
-    "typescript": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "typescript": "^4.3.5",
     "vite": "^2.5.4"
   },
   "dependencies": {
     "@vaadin/vaadin-app-layout": "^21.0.2",
-    "@vaadin/vaadin-icon": "^21.0.2",
+    "@vaadin/vaadin-checkbox": "^21.0.2",
+    "@vaadin/vaadin-form-layout": "^21.0.2",
     "@vaadin/vaadin-icons": "^21.0.2",
-    "@vaadin/vaadin-lumo-styles": "^21.0.2",
     "@vaadin/vaadin-tabs": "^21.0.2",
+    "@vaadin/vaadin-text-field": "^21.0.2",
     "lit": "^2.0.0"
   }
 }
