feat(page-config): Add proper mobile layout to the pages

--- a/jobwatch/package.json
+++ b/jobwatch/package.json
@@ -20,6 +20,7 @@
     "@vaadin/vaadin-checkbox": "^21.0.2",
     "@vaadin/vaadin-form-layout": "^21.0.2",
     "@vaadin/vaadin-icons": "^21.0.2",
+    "@vaadin/vaadin-menu-bar": "^21.0.2",
     "@vaadin/vaadin-tabs": "^21.0.2",
     "@vaadin/vaadin-text-field": "^21.0.2",
     "lit": "^2.0.0"
