--- a/jobwatch/tsconfig.json
+++ b/jobwatch/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
     "strict": true,
-    "sourceMap": true,
+    "inlineSourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noEmit": true,
