--- a/tslitstrap/package.json
+++ b/tslitstrap/package.json
@@ -17,6 +17,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
-    "lit": "^2.0.0"
+    "lit": "^2.0.0",
+    "mobx": "^6.3.3"
   }
 }
